--- a/config/sync/field.field.paragraph.gallery.field_vih_heading.yml
+++ b/config/sync/field.field.paragraph.gallery.field_vih_heading.yml
@@ -1,12 +1,12 @@
-uuid: aa4fd368-a148-41f5-9c8b-e5f687f59654
+uuid: 57a51f6d-8464-4a4f-aeb3-a1c577efd47f
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_heading
+    - field.storage.paragraph.field_vih_heading
     - paragraphs.paragraphs_type.gallery
-id: paragraph.gallery.field_heading
-field_name: field_heading
+id: paragraph.gallery.field_vih_heading
+field_name: field_vih_heading
 entity_type: paragraph
 bundle: gallery
 label: Overskrift
