--- a/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
@@ -6,8 +6,8 @@ dependencies:
     - entity_browser.browser.image_browser
     - field.field.paragraph.list_of_news_teasers.field_background_color
     - field.field.paragraph.list_of_news_teasers.field_background_image
-    - field.field.paragraph.list_of_news_teasers.field_heading
     - field.field.paragraph.list_of_news_teasers.field_tags
+    - field.field.paragraph.list_of_news_teasers.field_vih_heading
     - paragraphs.paragraphs_type.list_of_news_teasers
   module:
     - entity_browser
@@ -20,7 +20,7 @@ third_party_settings:
         - field_background_image
         - field_background_color
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: tab
       format_settings:
         id: ''
@@ -54,19 +54,19 @@ content:
       selection_mode: selection_append
     third_party_settings: {  }
     region: content
-  field_heading:
-    weight: 0
+  field_tags:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_vih_heading:
+    weight: 1
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
-    region: content
-  field_tags:
-    weight: 1
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
     region: content
 hidden:
   created: true
