--- a/config/sync/field.field.paragraph.short_course_list_.field_vih_heading.yml
+++ b/config/sync/field.field.paragraph.short_course_list_.field_vih_heading.yml
@@ -1,12 +1,12 @@
-uuid: 946ecd3a-98aa-48ea-9381-39d97d46fa25
+uuid: b4d0ff94-41ac-46fb-b1c9-91d93e2c3645
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_heading
+    - field.storage.paragraph.field_vih_heading
     - paragraphs.paragraphs_type.short_course_list_
-id: paragraph.short_course_list_.field_heading
-field_name: field_heading
+id: paragraph.short_course_list_.field_vih_heading
+field_name: field_vih_heading
 entity_type: paragraph
 bundle: short_course_list_
 label: Overskrift
