--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -7,10 +7,10 @@ dependencies:
     - field.field.paragraph.user_quote.field_author
     - field.field.paragraph.user_quote.field_background_color
     - field.field.paragraph.user_quote.field_background_image
-    - field.field.paragraph.user_quote.field_heading
     - field.field.paragraph.user_quote.field_link
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
+    - field.field.paragraph.user_quote.field_vih_heading
     - paragraphs.paragraphs_type.user_quote
   module:
     - entity_browser
@@ -25,7 +25,7 @@ third_party_settings:
         - field_background_color
         - field_background_image
       parent_name: ''
-      weight: 5
+      weight: 6
       format_type: tab
       format_settings:
         id: ''
@@ -41,7 +41,7 @@ bundle: user_quote
 mode: default
 content:
   field_author:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -67,16 +67,8 @@ content:
       selection_mode: selection_append
     region: content
     third_party_settings: {  }
-  field_heading:
-    type: string_textfield
-    weight: 0
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   field_link:
-    weight: 4
+    weight: 5
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -85,7 +77,7 @@ content:
     region: content
   field_paragraph_person_photo:
     type: entity_browser_file
-    weight: 3
+    weight: 4
     settings:
       entity_browser: image_browser
       field_widget_remove: true
@@ -98,12 +90,20 @@ content:
     third_party_settings: {  }
   field_paragraph_text:
     type: text_textarea
-    weight: 2
+    weight: 3
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+  field_vih_heading:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
 hidden:
   created: true
   status: true
