--- a/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
@@ -6,10 +6,10 @@ dependencies:
     - field.field.paragraph.user_quote.field_author
     - field.field.paragraph.user_quote.field_background_color
     - field.field.paragraph.user_quote.field_background_image
-    - field.field.paragraph.user_quote.field_heading
     - field.field.paragraph.user_quote.field_link
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
+    - field.field.paragraph.user_quote.field_vih_heading
     - image.style.vih_person_teaser
     - paragraphs.paragraphs_type.user_quote
   module:
@@ -22,23 +22,15 @@ bundle: user_quote
 mode: default
 content:
   field_author:
-    weight: 4
+    weight: 5
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  field_heading:
-    type: string
-    weight: 0
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
   field_link:
-    weight: 3
+    weight: 4
     label: hidden
     settings:
       trim_length: null
@@ -51,7 +43,7 @@ content:
     region: content
   field_paragraph_person_photo:
     type: image
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings:
@@ -60,11 +52,19 @@ content:
     third_party_settings: {  }
   field_paragraph_text:
     type: text_default
-    weight: 2
+    weight: 3
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
+  field_vih_heading:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
 hidden:
   field_background_color: true
   field_background_image: true
