--- a/config/sync/core.entity_form_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.video.default.yml
@@ -7,9 +7,9 @@ dependencies:
     - field.field.paragraph.video.field_background_color
     - field.field.paragraph.video.field_background_image
     - field.field.paragraph.video.field_description
-    - field.field.paragraph.video.field_heading
     - field.field.paragraph.video.field_highlighted
     - field.field.paragraph.video.field_video
+    - field.field.paragraph.video.field_vih_heading
     - paragraphs.paragraphs_type.video
   module:
     - entity_browser
@@ -24,7 +24,7 @@ third_party_settings:
         - field_background_image
         - field_background_color
       parent_name: ''
-      weight: 4
+      weight: 5
       format_type: tab
       format_settings:
         id: ''
@@ -59,23 +59,15 @@ content:
     third_party_settings: {  }
     region: content
   field_description:
-    weight: 2
+    weight: 3
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
     region: content
-  field_heading:
-    weight: 0
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_highlighted:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -83,10 +75,18 @@ content:
     type: text_textfield
     region: content
   field_video:
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: video_embed_field_textfield
+    region: content
+  field_vih_heading:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
 hidden:
   created: true
