--- a/config/sync/field.field.paragraph.vih_class_groups_accordion.field_vih_heading.yml
+++ b/config/sync/field.field.paragraph.vih_class_groups_accordion.field_vih_heading.yml
@@ -1,12 +1,12 @@
-uuid: 8904eb14-4256-4524-a7ba-ba70a7e147e1
+uuid: 0537e188-4bc9-425b-a671-6078dedeb63b
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_heading
+    - field.storage.paragraph.field_vih_heading
     - paragraphs.paragraphs_type.vih_class_groups_accordion
-id: paragraph.vih_class_groups_accordion.field_heading
-field_name: field_heading
+id: paragraph.vih_class_groups_accordion.field_vih_heading
+field_name: field_vih_heading
 entity_type: paragraph
 bundle: vih_class_groups_accordion
 label: Overskrift
