--- a/config/sync/field.field.paragraph.vih_teacher_class_description.field_vih_heading.yml
+++ b/config/sync/field.field.paragraph.vih_teacher_class_description.field_vih_heading.yml
@@ -1,18 +1,18 @@
-uuid: b4b94e2a-ccc3-4292-9b69-458c1a7b95c1
+uuid: 5a2db79e-74aa-434c-a87e-bfa0bdb12d04
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_heading
+    - field.storage.paragraph.field_vih_heading
     - paragraphs.paragraphs_type.vih_teacher_class_description
-id: paragraph.vih_teacher_class_description.field_heading
-field_name: field_heading
+id: paragraph.vih_teacher_class_description.field_vih_heading
+field_name: field_vih_heading
 entity_type: paragraph
 bundle: vih_teacher_class_description
 label: Overskrift
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
