--- a/config/sync/core.entity_view_display.paragraph.vih_webform.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_webform.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.vih_webform.field_background_color
     - field.field.paragraph.vih_webform.field_background_image
-    - field.field.paragraph.vih_webform.field_heading
+    - field.field.paragraph.vih_webform.field_vih_heading
     - field.field.paragraph.vih_webform.field_vih_webform
     - image.style.paragraph_background_image
     - paragraphs.paragraphs_type.vih_webform
@@ -34,8 +34,8 @@ content:
     third_party_settings: {  }
     type: image
     region: content
-  field_heading:
-    weight: 0
+  field_vih_heading:
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
