--- a/config/sync/field.field.paragraph.vih_webform.field_vih_heading.yml
+++ b/config/sync/field.field.paragraph.vih_webform.field_vih_heading.yml
@@ -1,12 +1,12 @@
-uuid: 98cfe184-e8d4-4c31-9881-b32dd48024cd
+uuid: 48b5c4c4-4019-4a9b-839f-4ae6374e08eb
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_heading
+    - field.storage.paragraph.field_vih_heading
     - paragraphs.paragraphs_type.vih_webform
-id: paragraph.vih_webform.field_heading
-field_name: field_heading
+id: paragraph.vih_webform.field_vih_heading
+field_name: field_vih_heading
 entity_type: paragraph
 bundle: vih_webform
 label: Overskrift
