--- a/config/sync/core.entity_view_display.paragraph.employee.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.employee.default.yml
@@ -5,9 +5,9 @@ dependencies:
   config:
     - field.field.paragraph.employee.field_background_color
     - field.field.paragraph.employee.field_background_image
-    - field.field.paragraph.employee.field_heading
     - field.field.paragraph.employee.field_link
     - field.field.paragraph.employee.field_user_type_id
+    - field.field.paragraph.employee.field_vih_heading
     - paragraphs.paragraphs_type.employee
   module:
     - link
@@ -16,16 +16,8 @@ targetEntityType: paragraph
 bundle: employee
 mode: default
 content:
-  field_heading:
-    weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_link:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       trim_length: null
@@ -35,6 +27,14 @@ content:
       target: '0'
     third_party_settings: {  }
     type: link
+    region: content
+  field_vih_heading:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden:
   field_background_color: true
