--- a/config/sync/field.field.paragraph.employee.field_vih_heading.yml
+++ b/config/sync/field.field.paragraph.employee.field_vih_heading.yml
@@ -1,12 +1,12 @@
-uuid: 8f51118b-73c0-4ad7-a436-6a4e8db4b9bc
+uuid: 1f109691-bcdb-4996-9767-9e1b7d6ab5c3
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_heading
+    - field.storage.paragraph.field_vih_heading
     - paragraphs.paragraphs_type.employee
-id: paragraph.employee.field_heading
-field_name: field_heading
+id: paragraph.employee.field_vih_heading
+field_name: field_vih_heading
 entity_type: paragraph
 bundle: employee
 label: Overskrift
