--- a/config/sync/field.field.paragraph.long_course_list_.field_vih_heading.yml
+++ b/config/sync/field.field.paragraph.long_course_list_.field_vih_heading.yml
@@ -1,12 +1,12 @@
-uuid: 70aafc59-bd33-448a-9170-ecf40d578fd6
+uuid: fcfb46e6-101a-4e57-a59c-24bc3d27a51c
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_heading
+    - field.storage.paragraph.field_vih_heading
     - paragraphs.paragraphs_type.long_course_list_
-id: paragraph.long_course_list_.field_heading
-field_name: field_heading
+id: paragraph.long_course_list_.field_vih_heading
+field_name: field_vih_heading
 entity_type: paragraph
 bundle: long_course_list_
 label: Overskrift
