--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.list_advanced
-    - field.field.taxonomy_term.vih_class.field_heading
     - field.field.taxonomy_term.vih_class.field_metatag
     - field.field.taxonomy_term.vih_class.field_paragraphs
     - field.field.taxonomy_term.vih_class.field_subheading
@@ -14,6 +13,7 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_image
     - field.field.taxonomy_term.vih_class.field_vih_class_material_price
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
+    - field.field.taxonomy_term.vih_class.field_vih_heading
     - image.style.list_advanced
     - taxonomy.vocabulary.vih_class
   module:
@@ -57,7 +57,6 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
-  field_heading: true
   field_metatag: true
   field_paragraphs: true
   field_subheading: true
@@ -65,4 +64,5 @@ hidden:
   field_vih_class_class_packages: true
   field_vih_class_material_price: true
   field_vih_class_price_addition: true
+  field_vih_heading: true
   langcode: true
