--- a/config/sync/field.field.taxonomy_term.vih_class.field_vih_heading.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class.field_vih_heading.yml
@@ -1,12 +1,12 @@
-uuid: 1a6d4208-e633-4257-a664-54dbe12a65a2
+uuid: bf731c64-6137-4f59-a0c7-c15cca736251
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.taxonomy_term.field_heading
+    - field.storage.taxonomy_term.field_vih_heading
     - taxonomy.vocabulary.vih_class
-id: taxonomy_term.vih_class.field_heading
-field_name: field_heading
+id: taxonomy_term.vih_class.field_vih_heading
+field_name: field_vih_heading
 entity_type: taxonomy_term
 bundle: vih_class
 label: Overskrift
