--- a/config/sync/field.field.taxonomy_term.vih_class_package.field_vih_heading.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class_package.field_vih_heading.yml
@@ -1,12 +1,12 @@
-uuid: 263f3f3e-2aab-4ae9-9b4d-1c92bf19d12a
+uuid: b35fd6d1-a897-4675-ad0f-71ea6fbb5f53
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.taxonomy_term.field_heading
+    - field.storage.taxonomy_term.field_vih_heading
     - taxonomy.vocabulary.vih_class_package
-id: taxonomy_term.vih_class_package.field_heading
-field_name: field_heading
+id: taxonomy_term.vih_class_package.field_vih_heading
+field_name: field_vih_heading
 entity_type: taxonomy_term
 bundle: vih_class_package
 label: Overskrift
