VI-179 block notify field_vih_link settings

--- a/config/sync/core.entity_form_display.block_content.notify.default.yml
+++ b/config/sync/core.entity_form_display.block_content.notify.default.yml
@@ -5,8 +5,8 @@ dependencies:
   config:
     - block_content.type.notify
     - field.field.block_content.notify.field_highlighted_text
-    - field.field.block_content.notify.field_link
     - field.field.block_content.notify.field_vih_heading
+    - field.field.block_content.notify.field_vih_link
   module:
     - link
     - workbench_moderation
@@ -16,28 +16,28 @@ bundle: notify
 mode: default
 content:
   field_highlighted_text:
-    weight: 2
+    weight: 1
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
-    region: content
-  field_link:
-    weight: 3
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-    type: link_default
     region: content
   field_vih_heading:
     type: string_textfield
-    weight: 1
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  field_vih_link:
+    type: link_default
+    weight: 3
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
     third_party_settings: {  }
   info:
     type: string_textfield
