--- a/config/sync/field.field.block_content.notify.field_vih_link.yml
+++ b/config/sync/field.field.block_content.notify.field_vih_link.yml
@@ -1,14 +1,14 @@
-uuid: 1532f781-c11f-4cec-9438-6fdbd0e85681
+uuid: 9ac3d271-3034-47e8-9cb4-f2d4bed656aa
 langcode: da
 status: true
 dependencies:
   config:
     - block_content.type.notify
-    - field.storage.block_content.field_link
+    - field.storage.block_content.field_vih_link
   module:
     - link
-id: block_content.notify.field_link
-field_name: field_link
+id: block_content.notify.field_vih_link
+field_name: field_vih_link
 entity_type: block_content
 bundle: notify
 label: Link
