VI-179 block banner field_vih_link settings

--- a/config/sync/field.field.block_content.banner.field_vih_link.yml
+++ b/config/sync/field.field.block_content.banner.field_vih_link.yml
@@ -1,23 +1,23 @@
-uuid: 7d87b0e5-6ea5-461b-ace4-52327413041f
+uuid: c12cf34a-462d-46b0-bb56-6e9a6b89d7ec
 langcode: da
 status: true
 dependencies:
   config:
     - block_content.type.banner
-    - field.storage.block_content.field_link
+    - field.storage.block_content.field_vih_link
   module:
     - link
-id: block_content.banner.field_link
-field_name: field_link
+id: block_content.banner.field_vih_link
+field_name: field_vih_link
 entity_type: block_content
 bundle: banner
 label: Link
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
   link_type: 17
-  title: 2
+  title: 1
 field_type: link
