--- a/config/sync/core.entity_form_display.block_content.banner.default.yml
+++ b/config/sync/core.entity_form_display.block_content.banner.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - block_content.type.banner
     - entity_browser.browser.image_browser
     - field.field.block_content.banner.field_image
-    - field.field.block_content.banner.field_link
+    - field.field.block_content.banner.field_vih_link
   module:
     - entity_browser
     - link
@@ -29,14 +29,14 @@ content:
       selection_mode: selection_append
     region: content
     third_party_settings: {  }
-  field_link:
-    type: link_default
-    weight: 2
-    region: content
+  field_vih_link:
+    weight: 26
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
+    type: link_default
+    region: content
   info:
     type: string_textfield
     weight: 0
