--- a/config/sync/core.entity_view_display.block_content.banner.default.yml
+++ b/config/sync/core.entity_view_display.block_content.banner.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - block_content.type.banner
     - field.field.block_content.banner.field_image
-    - field.field.block_content.banner.field_link
+    - field.field.block_content.banner.field_vih_link
     - image.style.banner
   module:
     - image
@@ -23,8 +23,8 @@ content:
       image_style: banner
     third_party_settings: {  }
     region: content
-  field_link:
-    weight: 1
+  field_vih_link:
+    weight: 2
     label: hidden
     settings:
       trim_length: 80
