--- a/config/sync/core.entity_form_display.paragraph.article.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.article.default.yml
@@ -7,8 +7,8 @@ dependencies:
     - field.field.paragraph.article.field_background_color
     - field.field.paragraph.article.field_background_image
     - field.field.paragraph.article.field_body
-    - field.field.paragraph.article.field_link
     - field.field.paragraph.article.field_vih_heading
+    - field.field.paragraph.article.field_vih_link
     - paragraphs.paragraphs_type.article
   module:
     - entity_browser
@@ -58,28 +58,28 @@ content:
     region: content
     third_party_settings: {  }
   field_body:
-    weight: 2
+    weight: 1
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
     region: content
-  field_link:
+  field_vih_heading:
+    weight: 0
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_vih_link:
     weight: 3
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
-    region: content
-  field_vih_heading:
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
     region: content
 hidden:
   created: true
