--- a/config/sync/field.field.paragraph.article.field_vih_link.yml
+++ b/config/sync/field.field.paragraph.article.field_vih_link.yml
@@ -1,14 +1,14 @@
-uuid: 13c914a2-e947-4d1c-8a34-f73c901843dc
+uuid: 7a6f748c-bdf9-42c6-a959-d626fce2d7d9
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_link
+    - field.storage.paragraph.field_vih_link
     - paragraphs.paragraphs_type.article
   module:
     - link
-id: paragraph.article.field_link
-field_name: field_link
+id: paragraph.article.field_vih_link
+field_name: field_vih_link
 entity_type: paragraph
 bundle: article
 label: Link
@@ -19,5 +19,5 @@ default_value: {  }
 default_value_callback: ''
 settings:
   link_type: 17
-  title: 2
+  title: 1
 field_type: link
