--- a/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
@@ -6,8 +6,8 @@ dependencies:
     - field.field.paragraph.class_packages.field_background_color
     - field.field.paragraph.class_packages.field_background_image
     - field.field.paragraph.class_packages.field_class_id
-    - field.field.paragraph.class_packages.field_link
     - field.field.paragraph.class_packages.field_vih_heading
+    - field.field.paragraph.class_packages.field_vih_link
     - image.style.paragraph_background_image
     - paragraphs.paragraphs_type.class_packages
   module:
@@ -27,8 +27,16 @@ content:
     third_party_settings: {  }
     type: image
     region: content
-  field_link:
-    weight: 3
+  field_vih_heading:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_vih_link:
+    weight: 4
     label: hidden
     settings:
       trim_length: 80
@@ -38,14 +46,6 @@ content:
       target: ''
     third_party_settings: {  }
     type: link
-    region: content
-  field_vih_heading:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
 hidden:
   field_background_color: true
