--- a/config/sync/field.field.paragraph.class_packages.field_vih_link.yml
+++ b/config/sync/field.field.paragraph.class_packages.field_vih_link.yml
@@ -1,14 +1,14 @@
-uuid: e8a103d3-18e7-484c-a726-7d84fde2fdbc
+uuid: cbe9b4fd-b88b-4d7b-bcc2-fa242ef81e33
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_link
+    - field.storage.paragraph.field_vih_link
     - paragraphs.paragraphs_type.class_packages
   module:
     - link
-id: paragraph.class_packages.field_link
-field_name: field_link
+id: paragraph.class_packages.field_vih_link
+field_name: field_vih_link
 entity_type: paragraph
 bundle: class_packages
 label: Link
