--- a/config/sync/core.entity_view_display.paragraph.event_list.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.event_list.default.yml
@@ -6,8 +6,8 @@ dependencies:
     - field.field.paragraph.event_list.field_background_color
     - field.field.paragraph.event_list.field_background_image
     - field.field.paragraph.event_list.field_event_id
-    - field.field.paragraph.event_list.field_link
     - field.field.paragraph.event_list.field_vih_heading
+    - field.field.paragraph.event_list.field_vih_link
     - paragraphs.paragraphs_type.event_list
   module:
     - link
@@ -16,8 +16,16 @@ targetEntityType: paragraph
 bundle: event_list
 mode: default
 content:
-  field_link:
-    weight: 2
+  field_vih_heading:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_vih_link:
+    weight: 3
     label: hidden
     settings:
       trim_length: null
@@ -27,14 +35,6 @@ content:
       target: '0'
     third_party_settings: {  }
     type: link
-    region: content
-  field_vih_heading:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
 hidden:
   field_background_color: true
